# PIRN

./: .gitignore  DEPLOY.md  PIRN_PLUSPLUS_README.md  README.md  pirn_plusplus.py  pyproject.toml
examples/: make_toy_feature_dataset.py  pirn_paper_baseline_stdlib.py  pirn_paper_train_step.py  quickstart.py
frontend/: app.js  index.html  server.py  styles.css
src/pirn_paper/: __init__.py  config.py  data.py  eval.py  metrics.py  model.py  train.py
src/pirn_paper/modules/: __init__.py  apr.py  bpa.py  mnc.py
src/pirn_pp/: __init__.py  config.py  model.py  utils.py
src/pirn_pp/modules/: __init__.py  apr_pp.py  bpa_pp.py  mnc_pp.py
